--- a/LAeq and LEX/Web.config
+++ b/LAeq and LEX/Web.config
@@ -71,6 +71,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ehslaeq" connectionString="server=cnwuxg0te01;user id=root;password=Jabil12345;persistsecurityinfo=True;database=ehs_laeq_db" providerName="MySql.Data.MySqlClient" />
+    <add name="ehslaeq" connectionString="server=userwx0sql01;user id=root;password=abdc1234;persistsecurityinfo=True;database=ehs_laeq_db" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 </configuration>
